# oxide-chess-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODOS.md  temp.md
.github/workflows/: release.yml
docs/: architecture.md  elo.md  evaluation.md  search.md  time.md  uci.md
nets/: nn-84a0038bb895.nnue  nn-8808c22a8203.nnue  nn-d3ef9a94bfa0.nnue  nn-eab269a07a62.nnue
scripts/: convert_checkpoints.sh  generate_data.sh  promote_net.sh  sprt_all_nets.sh  validate_nets.sh
src/: bitboards.rs  book.rs  datagen.rs  defs.rs  eret.rs  evaluate.rs  hash.rs  main.rs  movegen.rs  position.rs  search.rs  tablebase.rs  time.rs  uci.rs
src/bitboards/: defs.rs
src/book/: keys.rs
src/evaluate/: defs.rs  tables.rs  transposition.rs
src/misc/: bits.rs
src/movegen/: defs.rs  test.rs
src/nnue/: defs.rs  features.rs  mod.rs  network.rs  simd.rs
src/position/: defs.rs  fen.rs  test.rs
src/search/: defs.rs  move_picker.rs  test.rs
src/search/tests/: endgame.rs  epd.rs  evaluation.rs  mod.rs  opening.rs  perft.rs  pitfalls.rs  tactics.rs
src/time/: defs.rs
tools/: plain2binpack.cpp
training/: .gitignore  Cargo.toml  README.md  config.py  data.py  export.py  rename_binpacks.sh  train.py
training/data/test/: test.binpack
training/dataloader/: CMakeLists.txt  _native.py  binpack_loader.cpp  compile.sh
training/pytorch/: config.py  data.py  export.py  model.py  pyproject.toml  train.py
training/src/: main.rs
