[package]
name = "oxide-trainer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/main.rs"

[[bin]]
name = "convert"
path = "src/bin/convert.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[features]
default = ["cpu"]
cpu = ["bullet/cpu"]
cuda = ["bullet/cuda"]

[dependencies]
bullet = { git = "https://github.com/jw1912/bullet", package = "bullet_lib", default-features = false }
