[package]
name = "oxid-trainer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "train"
path = "src/main.rs"

[[bin]]
name = "convert"
path = "src/bin/convert.rs"

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"

[features]
default = ["metal"]
metal = ["bullet/metal"]
cuda = ["bullet/cuda"]
rocm = ["bullet/rocm"]

[dependencies]
bullet = { git = "https://github.com/Blightwidow/bullet-metal", package = "bullet_lib", default-features = false }
